general organization of the project. Removed unused scripts, cleaned remaining ones, assembly implementation...